fixed responsive on iphone

--- a/main.css
+++ b/main.css
@@ -186,28 +186,26 @@ input[type=submit]:hover {
     }
     section.sec1 {
         background: url(images/Mcov.png);
+        background-position: center top;
         background-size: cover;
-  
-        background-attachment: fixed;
-        background-position: center;
     }
     section.sec2 {
         background: url(images/Mspeakin.jpg);
         background-size: cover;
         background-position: center;
-        background-attachment: fixed;
+
     }
     section.sec3 {
         background: url(images/Mmoana.jpg);
         background-size: cover;
         background-position: center;
-        background-attachment: fixed;
+  
     }
     section.sec4 {
         background: url(images/Mgfest.png);
         background-size: cover;
         background-position: center;
-        background-attachment: fixed;
+     
     }
 
     section.secText {
@@ -265,5 +263,8 @@ input[type=submit]:hover {
     nav a:nth-child(5) {
         margin-right: 16vw;
     }
+    nav a:nth-child(7) {
+        margin-right: 1vw;
+}
 
 }
